# motus

./: .gitignore  .goreleaser.linux.yaml  .goreleaser.macos.yaml  .goreleaser.yaml  Cargo.toml  Cross.toml  Makefile  README.md  deny.toml  renovate.json
.github/events/: push-tag.json
.github/workflows/: build.yml  ci.yml  release.yml  security-audit.yml  security.yml
cli/: Cargo.toml
crates/motus/: Cargo.toml
crates/motus-cli/: Cargo.toml
crates/motus-cli/src/: main.rs
crates/motus-cli/tests/: integration.rs
crates/motus-tests/: Cargo.toml
crates/motus-wasm/: Cargo.toml  index.html
crates/motus-wasm/src/: lib.rs
crates/motus/src/: lib.rs
motus/: Cargo.toml
src/: analysis.rs  lib.rs  main.rs
tapes/: memorable.tape  motus.tape  pin.tape  random.tape  report.tape
tests/: integration.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
