[package]
edition = "2024"
name = "cli"
version = "0.3.1"
license = "AGPL-3.0-or-later"
publish = false

[features]
default = ["clipboard"]
clipboard = ["dep:arboard"]

[[bin]]
name = "motus"
path = "src/main.rs"

[package.metadata.deb]
copyright = "2023, Théo Crevon <theo@crevon.me>"
extended-description = """\
Motus is a command-line application written in Rust that makes generating secure passwords a breeze.

Inspired by the user experience of the 1Password password generator, motus focuses on providing a simple
and elegant user interface with sane defaults and comprehensive options.

By default, motus copies the generated password to your clipboard (when compiled with clipboard support),
making it even more convenient to use.
"""
maintainer = "Théo Crevon <theo@crevon.me>"
priority = "optional"
section = "main"

[dependencies]
arboard = { version = "3.2.0", default-features = false, optional = true }
clap = "4.3.11"
colored = "3.0.0"
human-panic = { version = "2.0.2", default-features = false }
motus = { path = "../motus" }
rand = { version = "0.10.0", default-features = false, features = [ "alloc", "thread_rng" ] }
serde = { version = "1.0.171", default-features = false }
serde_json = "1.0.100"
term-table = "1.4.0"
zxcvbn = { version = "3.1.0", default-features = false }

[dev-dependencies]
assert_cmd = "2.0.11"
assert_json = "0.1.0"
