[package]
edition = "2021"
name = "wasm"
description = "A WASM-compatible wrapper around the motus crate"
version = "0.1.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = {version = "0.2.10", features = ["js"]}
motus = {version = "0.2.0", path = "../motus"}
rand = "0.8.5"
wasm-bindgen = "0.2.87"
