[package]
edition = "2024"
name = "motus-wasm"
description = "A dead-simple secure password generator WASM library"
version = "0.3.1"
homepage = "https://github.com/oleiade/motus"
repository = "https://github.com/oleiade/motus"
keywords = ["password", "generator", "wasm", "rust"]
license-file = "../LICENSE"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = {version = "0.3.2", features = ["wasm_js"]}
motus = {version = "0.3.1", path = "../motus"}
rand = "0.9.1"
wasm-bindgen = "0.2.87"
