[package]
edition = "2024"
name = "motus-wasm"
description = "A dead-simple secure password generator WASM library"
version = "0.3.1"
homepage = "https://github.com/oleiade/motus"
repository = "https://github.com/oleiade/motus"
keywords = ["password", "generator", "wasm", "rust"]
license = "AGPL-3.0-or-later"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = "0.4.0"
motus = {version = "0.3.1", path = "../motus"}
rand = { version = "0.9.1", default-features = false }
wasm-bindgen = { version = "0.2.87", default-features = false }
