[package]
authors = ["Théo Crevon <theo@crevon.me>"]
categories = ["command-line-utilities"]
description = "A simple and secure password generation library"
edition = "2024"
homepage = "https://github.com/oleiade/motus/motus"
keywords = ["security", "password", "generator"]
license-file = "LICENSE"
name = "motus"
repository = "https://github.com/oleiade/motus"
version = "0.3.0"

[dependencies]
clap = {version = "4.3.11", features = ["derive"]}
itertools = "0.14.0"
rand = "0.9.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"