[package]
authors = ["Théo Crevon <theo@crevon.me>"]
categories = ["command-line-utilities"]
description = "A simple and secure password generation library"
edition = "2024"
homepage = "https://github.com/oleiade/motus/motus"
keywords = ["security", "password", "generator"]
license = "AGPL-3.0-or-later"
name = "motus"
repository = "https://github.com/oleiade/motus"
version = "0.3.1"

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
itertools = { version = "0.14.0", default-features = false }
rand = { version = "0.10.0", default-features = false }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
